fix: updated digest check